--- a/models/saleproductpivot/fields.yaml
+++ b/models/saleproductpivot/fields.yaml
@@ -3,6 +3,9 @@
 # ===================================
 
 fields:
+    product_info:
+      type: partial
+      path: relation_products_sales_info
     pivot[quantity]:
         label: Cantidad
         span: auto
@@ -10,8 +13,7 @@ fields:
     pivot[price]:
         label: Precio de Venta
         span: auto
-        context: update
-
+        defaultFrom: price_sale
 #    pivot[subtotal]:
 #        label: Subtotal 
 #        span: auto
