--- a/controllers/sales/config_relation.yaml
+++ b/controllers/sales/config_relation.yaml
@@ -14,11 +14,38 @@ products_pivot_model:
     pivot:
         form: ~/plugins/awme/stockist/models/saleproductpivot/fields.yaml
 
+invoice_products:
+    label: awme.stockist::lang.sales.products
+    view:
+        list: ~/plugins/awme/stockist/models/saleproductpivot/columns.yaml
+        toolbarPartial: 
+        showSearch: false
+        showSetup: false
+        showCheckboxes: false
+        recordOnClick: false 
+    pivot:
+        form: ~/plugins/awme/stockist/models/saleproductpivot/invoice-fields.yaml
+
 pay_methods:
     label: awme.stockist::lang.paymethods.pays
     view:
         list: ~/plugins/awme/stockist/models/salepaymethodpivot/columns.yaml
         toolbarPartial: relation_paymethods_toolbar
+    manage:
+        list: ~/plugins/awme/stockist/models/paymethod/columns.yaml
+        showSearch: true
+    pivot:
+        form: ~/plugins/awme/stockist/models/salepaymethodpivot/fields.yaml
+
+invoice_pay_methods:
+    label: awme.stockist::lang.paymethods.pays
+    view:
+        list: ~/plugins/awme/stockist/models/salepaymethodpivot/columns.yaml
+        toolbarPartial:
+        showSearch: false
+        showSetup: false
+        showCheckboxes: false
+        recordOnClick: false 
     manage:
         list: ~/plugins/awme/stockist/models/paymethod/columns.yaml
         showSearch: true
