Colored Tables And Icons

--- a/controllers/tills/config_list.yaml
+++ b/controllers/tills/config_list.yaml
@@ -8,4 +8,4 @@ toolbar:
     buttons: list_toolbar
     search:
         prompt: 'backend::lang.list.search_prompt'
-recordUrl: 'awme/stockist/tills/update/:id'
+#recordUrl: 'awme/stockist/tills/update/:id'
